fix(css): improve dark mode

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -21,4 +21,7 @@
 
 .dark {
   --ui-bg: var(--ui-color-neutral-950);
+  --ui-bg-muted: var(--ui-color-neutral-900);
+  --ui-bg-elevated: var(--ui-color-neutral-900);
+  --ui-bg-accented: var(--ui-color-neutral-800);
 }
